==> u-blox/cellular/port/platform/stm/stm32f4/src/cellular_port_uart.c <==
# include "cellular_cfg_override.h" // For a customer's configuration override
#include "cellular_cfg_sw.h"
#include "cellular_cfg_hw_platform_specific.h"
#include "cellular_port_debug.h"
#include "cellular_port_clib.h"
#include "cellular_port.h"
#include "cellular_port_os.h"
#include "cellular_port_uart.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"
#include "stm32f4xx_ll_bus.h"
#include "stm32f4xx_ll_gpio.h"
#include "stm32f4xx_ll_dma.h"
#include "stm32f4xx_ll_usart.h"
#include "cellular_port_private.h"  // Down here 'cos it needs GPIO_TypeDef
#define CELLULAR_PORT_MAX_NUM_UARTS 8
#define CELLULAR_PORT_UART_MELD2(x, y) x ## y
#define CELLULAR_PORT_UART_MELD5(v, w, x, y, z) v ## w ## x ## y ## z
#define CELLULAR_PORT_DMA(x) CELLULAR_PORT_UART_MELD2(DMA, x)
#define CELLULAR_PORT_DMA_STREAM(x) CELLULAR_PORT_UART_MELD2(LL_DMA_STREAM_, x)
#define CELLULAR_PORT_DMA_CHANNEL(x) CELLULAR_PORT_UART_MELD2(LL_DMA_CHANNEL_, x)
#define CELLULAR_DMA_STREAM_IRQ_N(x, y) CELLULAR_PORT_UART_MELD5(DMA, x, _Stream, y, _IRQn)
#define CELLULAR_DMA_CLEAR_FLAG_HT(x) CELLULAR_PORT_UART_MELD2(LL_DMA_ClearFlag_HT, x)
#define CELLULAR_DMA_CLEAR_FLAG_TC(x) CELLULAR_PORT_UART_MELD2(LL_DMA_ClearFlag_TC, x)
#define CELLULAR_DMA_CLEAR_FLAG_TE(x) CELLULAR_PORT_UART_MELD2(LL_DMA_ClearFlag_TE, x)
#define CELLULAR_DMA_CLEAR_FLAG_DME(x) CELLULAR_PORT_UART_MELD2(LL_DMA_ClearFlag_DME, x)
#define CELLULAR_DMA_CLEAR_FLAG_FE(x) CELLULAR_PORT_UART_MELD2(LL_DMA_ClearFlag_FE, x)

int32_t cellularPortUartInit(int32_t pinTx, int32_t pinRx,
                             int32_t pinCts, int32_t pinRts,
                             int32_t baudRate,
                             size_t rtsThreshold,
                             int32_t uart,
                             CellularPortQueueHandle_t *pUartQueue)
{
    CellularPortErrorCode_t errorCode = CELLULAR_PORT_INVALID_PARAMETER;
    ErrorStatus platformError;
    CellularPortUartData_t uartData = {0};
    LL_USART_InitTypeDef usartInitStruct = {0};
    LL_GPIO_InitTypeDef gpioInitStruct = {0};

    // TODO: use this
    (void) rtsThreshold;

    if ((pUartQueue != NULL) && (pinRx >= 0) && (pinTx >= 0) &&
        (uart > 0) && (uart <= CELLULAR_PORT_MAX_NUM_UARTS) &&
        (baudRate >= 0)) {
        errorCode = CELLULAR_PORT_SUCCESS;
        if (pGetUart(uart) == NULL) {
            // Create the mutex
            errorCode = cellularPortMutexCreate(&(uartData.mutex));
            if (errorCode == 0) {

                CELLULAR_PORT_MUTEX_LOCK(uartData.mutex);

                errorCode = CELLULAR_PORT_OUT_OF_MEMORY;

                uartData.number = uart;
                // Malloc memory for the read buffer
                uartData.pRxBufferStart = (char *) pCellularPort_malloc(CELLULAR_PORT_UART_RX_BUFFER_SIZE);
                if (uartData.pRxBufferStart != NULL) {
                    uartData.pRxBufferRead = uartData.pRxBufferStart;
                    uartData.pRxBufferWrite = uartData.pRxBufferStart;
                    uartData.toRead = 0;
                    uartData.userNeedsNotify = true;

                    // Create the queue
                    errorCode = cellularPortQueueCreate(CELLULAR_PORT_UART_EVENT_QUEUE_SIZE,
                                                        sizeof(CellularPortUartEventData_t),
                                                        pUartQueue);
                    if (errorCode == 0) {
                        uartData.queue = *pUartQueue;

                        // Now do the platform stuff
                        errorCode = CELLULAR_PORT_PLATFORM_ERROR;

                        // Enable UART clock
                        gLlApbClkEnable[uart](gLlApbGrpPeriphUsart[uart]);

                        // Enable DMA clock (all DMAs are on bus 1)
                        LL_AHB1_GRP1_EnableClock(gLlApbGrpPeriphDma[CELLULAR_CFG_DMA]);

                        // Enable GPIO clocks (all on bus 1): note, using the LL driver rather
                        // than our driver or the HAL driver here partly because the
                        // example code does that and also because lower down
                        // we need to enable the UART alternate function for
                        // these pins.
                        LL_AHB1_GRP1_EnableClock(gLlApbGrpPeriphGpioPort[CELLULAR_PORT_STM32F4_GPIO_PORT(pinTx)]);
                        LL_AHB1_GRP1_EnableClock(gLlApbGrpPeriphGpioPort[CELLULAR_PORT_STM32F4_GPIO_PORT(pinRx)]);
                        if (pinCts >= 0) {
                            LL_AHB1_GRP1_EnableClock(gLlApbGrpPeriphGpioPort[CELLULAR_PORT_STM32F4_GPIO_PORT(pinCts)]);
                        }
                        if (pinRts >= 0) {
                            LL_AHB1_GRP1_EnableClock(gLlApbGrpPeriphGpioPort[CELLULAR_PORT_STM32F4_GPIO_PORT(pinRts)]);
                        }

                        //  Configure the GPIOs, start with Tx
                        gpioInitStruct.Pin = CELLULAR_PORT_STM32F4_GPIO_PIN(pinTx);
                        gpioInitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
                        gpioInitStruct.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
                        // Output type doesn't matter, it is overridden by
                        // the alternate function
                        gpioInitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
                        gpioInitStruct.Pull = LL_GPIO_PULL_UP;
                        gpioInitStruct.Alternate = gGpioAf[uart];
                        platformError = LL_GPIO_Init(pCellularPortPrivateGpioGetReg(pinTx),
                                                     &gpioInitStruct);

                        //  Configure Rx
                        if (platformError == SUCCESS) {
                            gpioInitStruct.Pin = CELLULAR_PORT_STM32F4_GPIO_PIN(pinRx);
                            platformError = LL_GPIO_Init(pCellularPortPrivateGpioGetReg(pinRx),
                                                         &gpioInitStruct);
                        }

                        //  Configure RTS if present
                        if ((pinRts >= 0) && (platformError == SUCCESS)) {
                            gpioInitStruct.Pin = CELLULAR_PORT_STM32F4_GPIO_PIN(pinRts);
                            platformError = LL_GPIO_Init(pCellularPortPrivateGpioGetReg(pinRts),
                                                         &gpioInitStruct);
                        }

                        //  Configure CTS if present
                        if ((pinCts >= 0) && (platformError == SUCCESS)) {
                            gpioInitStruct.Pin = CELLULAR_PORT_STM32F4_GPIO_PIN(pinCts);
                            platformError = LL_GPIO_Init(pCellularPortPrivateGpioGetReg(pinCts),
                                                         &gpioInitStruct);
                        }

                        // Configure DMA
                        if (platformError == SUCCESS) {
                            // Channel CELLULAR_CFG_DMA_CHANNEL on our DMA/Stream
                            LL_DMA_SetChannelSelection(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                       CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                       CELLULAR_PORT_DMA_CHANNEL(CELLULAR_CFG_DMA_CHANNEL));
                            // Towards RAM
                            LL_DMA_SetDataTransferDirection(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                            CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                            LL_DMA_DIRECTION_PERIPH_TO_MEMORY);
                            // Low priority
                            LL_DMA_SetStreamPriorityLevel(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                          CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                          LL_DMA_PRIORITY_LOW);
                            // Circular
                            LL_DMA_SetMode(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                           CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                           LL_DMA_MODE_CIRCULAR);
                            // Byte-wise transfers
                            LL_DMA_SetPeriphIncMode(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                    CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                    LL_DMA_PERIPH_NOINCREMENT);
                            LL_DMA_SetMemoryIncMode(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                    CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                    LL_DMA_MEMORY_INCREMENT);
                            LL_DMA_SetPeriphSize(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                 CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                 LL_DMA_PDATAALIGN_BYTE);
                            LL_DMA_SetMemorySize(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                 CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                 LL_DMA_MDATAALIGN_BYTE);
                            // Not FIFO mode, whatever that is
                            LL_DMA_DisableFifoMode(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                   CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM));

                            // Attach the DMA to the UART at one end
                            LL_DMA_SetPeriphAddress(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                    CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                    (uint32_t) &((gpUsart[uart])->DR));

                            // ...and to the RAM buffer at the other end
                            LL_DMA_SetMemoryAddress(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                    CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                    (uint32_t) (uartData.pRxBufferStart));
                            LL_DMA_SetDataLength(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                 CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM),
                                                 CELLULAR_PORT_UART_RX_BUFFER_SIZE);

                            // Set DMA priority
                            NVIC_SetPriority(CELLULAR_DMA_STREAM_IRQ_N(CELLULAR_CFG_DMA, CELLULAR_CFG_DMA_STREAM),
                                             NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 5, 0));
                            // Clear all the DMA flags and DMA pending IRQ first
                            CELLULAR_DMA_CLEAR_FLAG_HT(CELLULAR_CFG_DMA_STREAM)(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA));
                            CELLULAR_DMA_CLEAR_FLAG_TC(CELLULAR_CFG_DMA_STREAM)(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA));
                            CELLULAR_DMA_CLEAR_FLAG_TE(CELLULAR_CFG_DMA_STREAM)(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA));
                            CELLULAR_DMA_CLEAR_FLAG_DME(CELLULAR_CFG_DMA_STREAM)(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA));
                            CELLULAR_DMA_CLEAR_FLAG_FE(CELLULAR_CFG_DMA_STREAM)(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA));
                            NVIC_ClearPendingIRQ(CELLULAR_DMA_STREAM_IRQ_N(CELLULAR_CFG_DMA,
                                                                           CELLULAR_CFG_DMA_STREAM));

                            // Enable half full and transmit complete interrupts
                            LL_DMA_EnableIT_HT(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                               CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM));
                            LL_DMA_EnableIT_TC(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                               CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM));

                            // Go!
                            NVIC_EnableIRQ(CELLULAR_DMA_STREAM_IRQ_N(CELLULAR_CFG_DMA, CELLULAR_CFG_DMA_STREAM));

                            // Initialise the USART
                            usartInitStruct.BaudRate = baudRate;
                            usartInitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
                            usartInitStruct.StopBits = LL_USART_STOPBITS_1;
                            usartInitStruct.Parity = LL_USART_PARITY_NONE;
                            usartInitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
                            // TODO: need to connect flow control to DMA?
                            usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
                            if ((pinRts >= 0) && (pinCts >= 0)) {
                                usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_RTS_CTS;
                            } else {
                                if (pinRts >= 0) {
                                    usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_RTS;
                                } else {
                                    usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_CTS;
                                }
                            }
                            usartInitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
                            platformError = LL_USART_Init(gpUsart[uart], &usartInitStruct);
                        }

                        // STILL more stuff to configure...
                        if (platformError == SUCCESS) {
                            LL_USART_ConfigAsyncMode(gpUsart[uart]);
                            LL_USART_EnableDMAReq_RX(gpUsart[uart]);
                            LL_USART_EnableIT_IDLE(gpUsart[uart]);

                            // Enable USART interrupt
                            NVIC_SetPriority(gUsartIrqN[uart],
                                             NVIC_EncodePriority(NVIC_GetPriorityGrouping(),
                                                                 5, 1));
                            NVIC_ClearPendingIRQ(gUsartIrqN[uart]);
                            NVIC_EnableIRQ(gUsartIrqN[uart]);

                            // Enable USART and DMA
                            LL_DMA_EnableStream(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                                CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM));
                            LL_USART_Enable(gpUsart[uart]);
                        }

                        // Finally, add the UART to the list
                        if (platformError == SUCCESS) {
                            errorCode = CELLULAR_PORT_OUT_OF_MEMORY;
                            if (pAddUart(uart, &uartData) != NULL) {
                                errorCode = CELLULAR_PORT_SUCCESS;
                            }
                        }
                    }
                }

                CELLULAR_PORT_MUTEX_UNLOCK(uartData.mutex);

                // If we failed, clean up
                if (errorCode != 0) {
                    cellularPortMutexDelete(uartData.mutex);
                    cellularPort_free(uartData.pRxBufferStart);
                }
            }
        }
    }

    return (int32_t) errorCode;
}

int32_t cellularPortUartDeinit(int32_t uart)
{
    CellularPortErrorCode_t errorCode = CELLULAR_PORT_INVALID_PARAMETER;
    CellularPortUartData_t *pUart;

    if ((uart > 0) && (uart <= CELLULAR_PORT_MAX_NUM_UARTS)) {
        pUart = pGetUart(uart);
        errorCode = CELLULAR_PORT_SUCCESS;
        if (pUart != NULL) {

            errorCode = CELLULAR_PORT_PLATFORM_ERROR;

            // This function should not be called if another task
            // already has the mutex, do a quick check here
            cellularPort_assert(cellularPortMutexGetLocker(pUart->mutex) == NULL);

            // No need to lock the mutex, we need to delete it
            // and we're not allowed to delete a locked mutex.
            // The caller needs to make sure that no read/write
            // is in progress when this function is called.

            // TODO check this

            // Disable DMA interrupt
            NVIC_DisableIRQ(CELLULAR_DMA_STREAM_IRQ_N(CELLULAR_CFG_DMA,
                                                      CELLULAR_CFG_DMA_STREAM));

            // Disable USART interrupt
            NVIC_DisableIRQ(gUsartIrqN[uart]);
            // Disable DMA and USART
            LL_DMA_DisableStream(CELLULAR_PORT_DMA(CELLULAR_CFG_DMA),
                                 CELLULAR_PORT_DMA_STREAM(CELLULAR_CFG_DMA_STREAM));
            LL_USART_Disable(gpUsart[uart]);
            LL_USART_DeInit(gpUsart[uart]);

            // Delete the queue
            cellularPortQueueDelete(pUart->queue);
            // Free the buffer
            cellularPort_free(pUart->pRxBufferStart);
            // Delete the mutex
            cellularPortMutexDelete(pUart->mutex);
            // And finally remove the UART from the list
            removeUart(uart);
            errorCode = CELLULAR_PORT_SUCCESS;
        }
    }

    return (int32_t) errorCode;
}

int32_t cellularPortUartGetReceiveSize(int32_t uart)
{
    CellularPortErrorCode_t sizeOrErrorCode = CELLULAR_PORT_INVALID_PARAMETER;
    CellularPortUartData_t *pUartData = pGetUart(uart);

    if (pUartData != NULL) {

        CELLULAR_PORT_MUTEX_LOCK(pUartData->mutex);

        // TODO
        sizeOrErrorCode = CELLULAR_PORT_NOT_IMPLEMENTED;

        CELLULAR_PORT_MUTEX_UNLOCK(pUartData->mutex);

    }

    return (int32_t) sizeOrErrorCode;
}

int32_t cellularPortUartRead(int32_t uart, char *pBuffer,
                             size_t sizeBytes)
{
    CellularPortErrorCode_t sizeOrErrorCode = CELLULAR_PORT_INVALID_PARAMETER;
    CellularPortUartData_t *pUartData = pGetUart(uart);

    if (pUartData != NULL) {

        CELLULAR_PORT_MUTEX_LOCK(pUartData->mutex);

        // TODO
        sizeOrErrorCode = CELLULAR_PORT_NOT_IMPLEMENTED;

        CELLULAR_PORT_MUTEX_UNLOCK(pUartData->mutex);

    }

    return (int32_t) sizeOrErrorCode;
}
